--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-table": "^8.19.3",
     "clsx": "^2.1.1",
     "prettier": "^3.3.2",
     "react": "^18.3.1",
