--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prettier": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.1",
     "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
