--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.51.11",
+    "@tanstack/react-query-devtools": "^5.51.11",
     "@tanstack/react-table": "^8.19.3",
+    "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.4",
     "prettier": "^3.3.2",
@@ -22,6 +25,8 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.24.7",
+    "@tanstack/eslint-plugin-query": "^5.51.12",
+    "@types/node": "^20.14.11",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
