--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-table": "^8.19.3",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.3.4",
     "prettier": "^3.3.2",
     "react": "^18.3.1",
