--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.24.7",
+    "@eslint/js": "^9.8.0",
     "@tanstack/eslint-plugin-query": "^5.51.12",
     "@types/node": "^20.14.11",
     "@types/react": "^18.3.3",
@@ -36,12 +37,15 @@
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
+    "eslint": "^9.8.0",
+    "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "globals": "^15.9.0",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
+    "typescript-eslint": "^8.0.0",
     "vite": "^5.3.1"
   }
 }
