--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.24.1",
+    "react-select": "^5.8.0",
     "reactjs-popup": "^2.0.6",
     "yup": "^1.4.0"
   },
