--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.3.4",
+    "node-hid": "^3.1.0",
     "prettier": "^3.3.2",
     "query-string": "^9.1.0",
     "react": "^18.3.1",
@@ -26,6 +27,8 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.24.1",
     "reactjs-popup": "^2.0.6",
+    "rfid-reader-input": "^0.0.1",
+    "serialport": "^12.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
