--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "main": "main.js", 
+  "main": "main.js",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "app": "electron . ", 
+    "app": "electron . ",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build_eletron": "electron-builder",
+    "start": "npm run build && npm run app"
+
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -53,6 +56,12 @@
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
     "typescript-eslint": "^8.1.0",
-    "vite": "^5.3.1"
+    "vite": "^5.3.1",
+    "electron-builder": "^22.11.7"
+  },  "build": {
+    "appId": "com.yourapp.id",
+    "win": {
+      "target": "nsis"
+    }
   }
 }
