--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "preview": "vite preview",
     "build_eletron": "electron-builder",
     "start": "npm run build && npm run app"
-
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -58,10 +57,15 @@
     "typescript-eslint": "^8.1.0",
     "vite": "^5.3.1",
     "electron-builder": "^22.11.7"
-  },  "build": {
-    "appId": "com.yourapp.id",
-    "win": {
-      "target": "nsis"
+  },
+  "build": {
+    "appId": "com.siradj-school.id",
+    "files": [
+      "dist/**/*",
+      "main.js"
+    ],
+    "directories": {
+      "buildResources": "build"
     }
   }
 }
