--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.3.4",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "prettier": "^3.3.2",
     "query-string": "^9.1.0",
     "react": "^18.3.1",
@@ -46,6 +48,7 @@
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
     "electron": "^31.4.0",
+    "electron-builder": "^22.11.7",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
@@ -55,8 +58,7 @@
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
     "typescript-eslint": "^8.1.0",
-    "vite": "^5.3.1",
-    "electron-builder": "^22.11.7"
+    "vite": "^5.3.1"
   },
   "build": {
     "appId": "com.siradj-school.id",
