--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@tanstack/react-query-devtools": "^5.51.11",
     "@tanstack/react-table": "^8.19.3",
     "axios": "^1.7.2",
-    "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.3.4",
     "prettier": "^3.3.2",
@@ -31,7 +30,6 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.24.1",
     "react-select": "^5.8.0",
-    "reactjs-popup": "^2.0.6",
     "yup": "^1.4.0"
   },
   "devDependencies": {
@@ -46,6 +44,7 @@
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
     "electron": "^31.4.0",
+    "electron-builder": "^22.11.7",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
@@ -55,8 +54,7 @@
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
     "typescript-eslint": "^8.1.0",
-    "vite": "^5.3.1",
-    "electron-builder": "^22.11.7"
+    "vite": "^5.3.1"
   },
   "build": {
     "appId": "com.school.id",
